Fixed creatorName alignment

--- a/src/app/feed/post/post.component.css
+++ b/src/app/feed/post/post.component.css
@@ -45,7 +45,7 @@ p {
   letter-spacing: 0.02em;
   color: #FFFFFF;
   position: absolute;
-  top: 14px;
+  top: 13px;
   left: 58px;
   text-overflow: ellipsis;
   overflow: hidden;
